change features name

--- a/akademnashr-project.html
+++ b/akademnashr-project.html
@@ -37,7 +37,7 @@
     <!-- features qismi oziga xosliklari -->
     <section>
       <hr>
-      <h2>Nega aynan <br>Akademnashr?</h2>
+      <h2>Nega aynan Akademnashr?</h2>
 
       <ul>
         <li>
