--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- site - header -->
   <header class="site-header">
     <a href="akademnashr-project.html"><img src="/img/logo.svg" alt="Akademnashr-logosi" width="227" height="60"></a>
+    <!-- site - nav -->
     <nav>
       <ul class="sitenav-list">
         <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
