--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- styles -->
+  <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
@@ -20,10 +21,10 @@
       <!-- site - nav -->
       <nav>
         <ul class="sitenav-list">
-          <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
-          <li><a class="sitenav-link" href="#">Kitoblar</a></li>
-          <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
-          <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
+          <li><a class="sitenav-item sitenav-link" href="#">Bosh sahifa</a></li>
+          <li><a class="sitenav-item sitenav-link" href="#">Kitoblar</a></li>
+          <li><a class="sitenav-item sitenav-link" href="#">Aksiyalar</a></li>
+          <li><a class="sitenav-item sitenav-link" href="#">Kontaktlar</a></li>
         </ul>
       </nav>
       <a class="orange-button" href="#">Ro'yxatdan o'tish</a>
