--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <!-- site - nav -->
       <nav>
         <ul class="sitenav-list">
-          <li><a class="sitenav-item sitenav-link" href="#">Bosh sahifa</a></li>
-          <li><a class="sitenav-item sitenav-link" href="#">Kitoblar</a></li>
-          <li><a class="sitenav-item sitenav-link" href="#">Aksiyalar</a></li>
-          <li><a class="sitenav-item sitenav-link" href="#">Kontaktlar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Bosh sahifa</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
         </ul>
       </nav>
       <a class="orange-button" href="#">Ro'yxatdan o'tish</a>
