Add margin and normalize styles

--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
     <section class="sale">
       <div class="sale-content">
         <h2 class="sale-heading">Bolalar kitoblari uchun <br>ajoyib aksiya!</h2>
-        <p class="sale-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish <br>uchun turli mashq qo’llanmalari va komikslar.</p>
-        <p class="sale-text">Aksiyadagi eng katta to’plamda <strong class="sale-highlight">50 ta kitob</strong>ni <strong class="sale-highlight">350 ming</strong> <br>so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+        <div class="sale-text-wrapper">
+          <p class="sale-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish <br>uchun turli mashq qo’llanmalari va komikslar.</p>
+          <p class="sale-text">Aksiyadagi eng katta to’plamda <strong class="sale-highlight">50 ta kitob</strong>ni <strong class="sale-highlight">350 ming</strong> <br>so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+        </div>
         <a class="orange-button" href="#">Buyurtma berish</a>
       </div>
 
